# ai-app-icons

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  background.py  chatbot.py  config.json  fly.toml  generate_icons.py  icon_gen.py  pyproject.toml  requirements.txt  test_backgrounds.py
.github/workflows/: fly-deploy.yml  publish-create-app-icon.yml
api/: .env.example  Dockerfile  pyproject.toml
api/src/ai_app_icons/: assets.py  constants.py  icon_gen.py  modes.py  pricing.py  session.py
background/: __init__.py  auto.py  color.py  gradient.py  image.py  solid.py
cli/: app.py  assets.py  session.py  ui.py
create-app-icon/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
create-app-icon/src/: api.ts  args.ts  backgrounds.ts  credentials.ts  deepMerge.ts  detect.ts  index.ts  login.ts  loopback.ts  patchConfig.ts  prompts.ts  readIconDir.ts  webFlow.ts  writeAssets.ts
docs/: TODO.md  deployment.md  self-hosting.md
mobile/: .env.example  .gitignore  README.md  app.config.ts  eas.json  package-lock.json  package.json
mobile/docs/: SETUP.md  TODO.md
mobile/lib/: supabase.ts
mobile/scripts/: setup.js
mobile/src/app/: _layout.tsx
mobile/src/components/: app-tabs.tsx  app-tabs.web.tsx  (+2 more)
src/ai_app_icons/: __init__.py  icon_gen.py
supabase/: config.toml
supabase/migrations/: 0001_auth_and_billing.sql  0002_drop_cli_api_keys.sql  0002_usage_tokens.sql  0003_chats.sql  0004_chat_icons_bucket.sql  0005_ratings.sql  0006_api_keys.sql
web/: middleware.ts  package-lock.json  package.json
(+135 files in other folders)
